feat(ui): normalise Pays (autocomplete) + fixes tests

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 
+# Local debug outputs
+flutter_test_expanded.txt
+
 # Android related
 **/android/**/gradle-wrapper.jar
 .gradle/
