--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -178,6 +178,28 @@
       }
     },
     {
+      "label": "MASLIVE: Git commit + push (country autocomplete normalization)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && if git ls-files --error-unmatch serviceAccountKey.json >/dev/null 2>&1; then echo 'ERROR: serviceAccountKey.json tracked'; exit 1; fi && if git ls-files '*firebase-adminsdk*.json' | grep -q .; then echo 'ERROR: firebase-adminsdk key tracked'; exit 1; fi && if git ls-files 'functions/.env' 'functions/.env.*' 'functions/.runtimeconfig.json' | grep -q .; then echo 'ERROR: functions secret file tracked'; exit 1; fi && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add -A && git commit -m \"feat(ui): normalise Pays (autocomplete) + fixes tests\" && git push origin main",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
+      "label": "MASLIVE: Git commit only (country autocomplete normalization) (debug)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add -A && git commit -m \"feat(ui): normalise Pays (autocomplete) + fixes tests\"",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Git commit + push (wizard pro segments + rules)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && if git ls-files --error-unmatch serviceAccountKey.json >/dev/null 2>&1; then echo 'ERROR: serviceAccountKey.json tracked'; exit 1; fi && if git ls-files '*firebase-adminsdk*.json' | grep -q .; then echo 'ERROR: firebase-adminsdk key tracked'; exit 1; fi && if git ls-files 'functions/.env' 'functions/.env.*' 'functions/.runtimeconfig.json' | grep -q .; then echo 'ERROR: functions secret file tracked'; exit 1; fi && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add -A && git commit -m \"fix(wizard): segments natif + web multi-map + rules\" && git push origin main",
@@ -456,6 +478,17 @@
       "label": "MASLIVE: Flutter test (all)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE/app && flutter test",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
+      "label": "MASLIVE: Flutter test (expanded dump)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE/app && flutter test -r expanded > /workspaces/MASLIVE/flutter_test_expanded.txt 2>&1 || true && echo 'WROTE: /workspaces/MASLIVE/flutter_test_expanded.txt' && tail -n 180 /workspaces/MASLIVE/flutter_test_expanded.txt",
       "problemMatcher": [],
       "presentation": {
         "reveal": "always",
