--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -178,6 +178,17 @@
       }
     },
     {
+      "label": "MASLIVE: Git commit + push (fix home map init)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add app/lib/ui/map/maslive_map_web.dart .vscode/tasks.json && git commit -m \"fix(web): wait DOM before map init\" && git push origin main",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Git commit + push (country autocomplete normalization)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && if git ls-files --error-unmatch serviceAccountKey.json >/dev/null 2>&1; then echo 'ERROR: serviceAccountKey.json tracked'; exit 1; fi && if git ls-files '*firebase-adminsdk*.json' | grep -q .; then echo 'ERROR: firebase-adminsdk key tracked'; exit 1; fi && if git ls-files 'functions/.env' 'functions/.env.*' 'functions/.runtimeconfig.json' | grep -q .; then echo 'ERROR: functions secret file tracked'; exit 1; fi && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add -A && git commit -m \"feat(ui): normalise Pays (autocomplete) + fixes tests\" && git push origin main",
