fix(wizard): apply Style Pro route in next steps (POI map)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -933,6 +933,18 @@
       }
     },
     {
+      "label": "MASLIVE: 🚀 Commit + Push + Build + Deploy (wizard style pro propagate)",
+      "type": "shell",
+      "command": "bash /workspaces/MASLIVE/commit_push_build_deploy.sh \"fix(wizard): apply Style Pro route in next steps (POI map)\"",
+      "problemMatcher": [],
+      "isBackground": false,
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: 🚀 Commit + Push + Build + Deploy (wizard pro: mapmarket + resize + POI)",
       "type": "shell",
       "command": "bash /workspaces/MASLIVE/commit_push_build_deploy.sh \"feat(wizard-pro): mapmarket publish + resize orientation + POI tools\"",
