--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "engines": {
-    "node": "22"
+    "node": ">=20"
   },
   "dependencies": {
     "firebase-admin": "^13.6.0",
