--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -136,6 +136,18 @@
       }
     },
     {
+      "label": "MASLIVE: 🚀 Commit + Push + Build + Deploy (POIs gated + styleUrl live)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add app/lib/admin/circuit_wizard_pro_page.dart app/lib/pages/default_map_page.dart app/lib/pages/home_map_page_3d.dart app/lib/ui/map/maslive_map_native.dart app/lib/ui/map/maslive_map_web.dart WIZARD_MAPBOX_STYLE_URL_QUICK_TEST.md .vscode/tasks.json && if git diff --cached --quiet; then echo '⚠️ Rien à committer (POIs gated + styleUrl live)'; exit 0; fi && git commit -m \"fix(map): POIs only after icon click + live styleUrl apply\" && git push origin main && cd app && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -z \"$TOKEN\" ]; then echo '❌ Token Mapbox manquant (MAPBOX_ACCESS_TOKEN).'; exit 1; fi && ../.flutter_sdk/bin/flutter pub get && ../.flutter_sdk/bin/flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\" && cd .. && firebase deploy --only hosting",
+      "problemMatcher": [],
+      "isBackground": false,
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: git rm --cached .env",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && git rm --cached .env 2>/dev/null && git commit -m \"chore(security): untrack .env from git index\" && git push origin main && echo '✅ .env désindexé et poussé' || echo '⚠️  .env déjà absent de l index git (rien à faire)'",
