--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -703,6 +703,17 @@
       "problemMatcher": []
     },
     {
+      "label": "MASLIVE: Git commit + push (wizard: lock scroll during map gestures)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add app/lib/admin/circuit_map_editor.dart app/lib/admin/circuit_wizard_pro_page.dart app/lib/route_style_pro/models/route_style_preset.dart app/test/route_style_pro/route_style_config_test.dart app/test/route_style_pro/route_style_controls_panel_test.dart .vscode/tasks.json && if git diff --cached --quiet; then echo '⚠️ Rien à committer (wizard scroll lock)'; exit 0; fi && git commit -m \"fix(wizard): prevent scroll during map gestures\" && git push origin main",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Git commit + push (wizard step indicator click nav)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add app/lib/admin/circuit_wizard_pro_page.dart .vscode/tasks.json && if git diff --cached --quiet; then echo '⚠️ Rien à committer (wizard click nav)'; exit 0; fi && git commit -m \"feat(wizard): allow direct step indicator navigation\" && git push origin main",
