--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -714,6 +714,17 @@
       }
     },
     {
+      "label": "MASLIVE: Git commit + push (map: scale route width with zoom)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add app/web/mapbox_bridge.js app/lib/ui/map/maslive_map_native.dart .vscode/tasks.json && if git diff --cached --quiet; then echo '⚠️ Rien à committer (route width zoom scale)'; exit 0; fi && git commit -m \"fix(map): scale route width with zoom\" && git push origin main",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Git commit + push (wizard step indicator click nav)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && EMAIL=$(git config --get user.email || true) && NAME=$(git config --get user.name || true) && if [ -z \"$EMAIL\" ]; then git config user.email \"devcontainer@maslive.local\"; fi && if [ -z \"$NAME\" ]; then git config user.name \"MASLIVE Devcontainer\"; fi && git add app/lib/admin/circuit_wizard_pro_page.dart .vscode/tasks.json && if git diff --cached --quiet; then echo '⚠️ Rien à committer (wizard click nav)'; exit 0; fi && git commit -m \"feat(wizard): allow direct step indicator navigation\" && git push origin main",
